Bug 244288. MSAA's WindowFromAccessibleObject doesn't work because our get_accParent doesnreturn a ROLE_WINDOW object as the parent of the ROLE_CLIENT