accessible/src/msaa/nsDocAccessibleWrap.cpp
@@ -152,6 +152,32 @@ STDMETHODIMP nsDocAccessibleWrap::get_accChild(
   return nsAccessibleWrap::get_accChild(varChild, ppdispChild);
 }
 
+STDMETHODIMP nsDocAccessibleWrap::get_accParent( IDispatch __RPC_FAR *__RPC_FAR *ppdispParent)
+{
+  // MSAA expects that client area accessibles return the native accessible for 
+  // their containing window, otherwise WindowFromAccessibleObject() doesn't work.
+
+  void* wnd;
+  GetWindowHandle(&wnd);
+
+  HWND pWnd = ::GetParent(NS_REINTERPRET_CAST(HWND, wnd));
+  if (pWnd) {
+    // get the accessible.
+    void* ptr = nsnull;
+    HRESULT result = AccessibleObjectFromWindow(pWnd, OBJID_WINDOW, IID_IAccessible, &ptr);
+    if (SUCCEEDED(result)) {
+      IAccessible* msaaParentAccessible = (IAccessible*)ptr;
+      // got one? return it.
+      if (msaaParentAccessible) {
+        *ppdispParent = msaaParentAccessible;
+        return S_OK;
+      }
+    }
+  }
+
+  return E_FAIL;
+}
+
 NS_IMETHODIMP nsDocAccessibleWrap::FireToolkitEvent(PRUint32 aEvent, nsIAccessible* aAccessible, void* aData)
 {
   if (!mWeakShell) {   // Means we're not active
